fixed alignment in reminder list item buttons

--- a/client/src/styles/components/_reminder-list.scss
+++ b/client/src/styles/components/_reminder-list.scss
@@ -2,6 +2,7 @@
     box-shadow: $inset-shadowing;
     border-radius: 0.75rem;
     max-height: 30rem;
+    overflow: scroll;
     padding: 1rem;
 
     &__container {
